# deanie

./: .gitignore  LICENSE  README.md  deanie.cabal
lib/: Deanie.hs
lib/Control/Applicative/: Extended.hs
lib/Deanie/: Density.hs  Expr.hs  Inference.hs  Language.hs  Measure.hs  RVar.hs
lib/Deanie/Inference/: Comonadic.hs  Importance.hs  Metropolis.hs  Rejection.hs
test/: BetaBernoulliImportance.hs  BetaBernoulliMetropolis.hs  BetaBernoulliRejection.hs  MixtureImportance.hs
test/Model/: BetaBernoulli.hs  Mixture.hs
